# TorchCCTV

./: .gitignore  README.md  create_database.py  definitions.py  liveness_CDCN.py  liveness_deepixbis.py  pyproject.toml  recognition_service.py
config/: model_conf.yaml
lib/face_sdk/model_convertor/: model_convert.py
lib/face_sdk/utils/: BuzException.py  lms_trans.py
lib/stream_zmq/: async_auth.py  async_client.py  async_event_monitor.py  async_server.py  client_req.py  server_rep.py  socket.py  utils.py
socket_app/: create_certificates.py
socket_app/cams/: async_moc_cam.py  moc_cam.py  moc_cam_zmq.py  moc_cam_zmq2.py  moc_cam_zmq3.py  moc_cam_zmq4.py
socket_app/client/: async_zmq_client.py  client.py  client_zmq.py
socket_app/server/: async_zmq_server.py  server.py  server_zmq.py
train/: ArcFace.py  MagFace.py  backbone.py  head.py
web_app/: db.sqlite3  manage.py
web_app/auth_app/: decorator.py  forms.py  urls.py  views.py
web_app/auth_app/migrations/: 0001_initial.py
web_app/core/: views.py
web_app/core/templates/: base.html  index.html  navbar.html  video_stream.js
web_app/video_server/: consumers.py  models.py  routing.py  stream.py  urls.py  utils.py  views.py
web_app/video_server/migrations/: 0001_initial.py
web_app/video_server/private_keys/: cam1.key_secret  cam2.key_secret  cam3.key_secret  cam4.key_secret  client.key_secret  client2.key_secret  client3.key_secret  server.key_secret  server2.key_secret
web_app/video_server/public_keys/: cam1.key  cam2.key  cam3.key  cam4.key  (+5 more)
web_app/web_app/: asgi.py  settings.py  urls.py
(+20 files in other folders)
